<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/iv_logo"
        android:src="@drawable/wigo_background3"
        android:layout_marginTop="@dimen/_318px_margin_top_logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/_616px_width_logo"
        android:layout_height="@dimen/_234px_height_logo" />
    <RelativeLayout
        android:layout_marginTop="@dimen/_105px_txt_username_margin_top"
        android:layout_width="@dimen/_954px_width_username_textbox"
        android:layout_height="@dimen/_144px_height_username_textbox"
        android:layout_gravity="center_horizontal">
        <EditText
            android:id="@+id/et_username"
            android:hint="@string/hint_username"
            android:background="@drawable/top_rounded_corner"
            android:layout_width="@dimen/_954px_width_username_textbox"
            android:layout_height="@dimen/_144px_height_username_textbox"
            style="@style/SalesforceSans_Regular_Style"
            android:inputType="textEmailAddress"/>
        <ProgressBar
            android:id="@+id/pb_loading_login"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerInParent="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"/>
    </RelativeLayout>

    <View
        android:layout_width="@dimen/_954px_width_username_textbox"
        android:layout_height="0.1dp"
        android:background="#c1c1c1"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/et_password"
        android:hint="@string/hint_password"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bot_rounded_corner"
        android:layout_width="@dimen/_954px_width_username_textbox"
        android:layout_height="@dimen/_144px_height_username_textbox"
        style="@style/SalesforceSans_Regular_Style"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_40px_btn_login_martin_top"
        android:background="@drawable/rounded_corner"
        android:layout_width="@dimen/_954px_width_username_textbox"
        android:layout_height="@dimen/_144px_height_username_textbox"
        style="@style/SalesforceSans_Regular_Style"/>
    <TextView
        android:id="@+id/tv_forgot_password"
        android:text="@string/forgot_your_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_40px_btn_login_martin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SalesforceSans_Regular_Style"/>

</LinearLayout>