<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_logo"
            android:src="@drawable/wigo_background3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_318px_margin_top_logo"
            android:layout_width="@dimen/_616px_width_logo"
            android:layout_height="@dimen/_234px_height_logo" />
        <TextView
            android:id="@+id/tv_forgot_password_description"
            android:text="@string/forgot_password_description"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SalesforceSans_Bold_Style"
            android:layout_marginTop="@dimen/_160px_forget_password_description_margin_top"
            android:textColor="@android:color/white"/>
        <RelativeLayout
            android:layout_width="@dimen/_954px_width_username_textbox"
            android:layout_height="@dimen/_144px_height_username_textbox"
            android:layout_marginTop="26dp"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/et_email"
                android:hint="@string/email"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/_954px_width_username_textbox"
                android:layout_height="@dimen/_144px_height_username_textbox"
                android:background="@drawable/rounded_corner_white_color"
                android:inputType="textEmailAddress"
                style="@style/SalesforceSans_Regular_Style"/>
            <ProgressBar
                android:id="@+id/pb_loading_send_mail"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerInParent="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_send_new_password"
            android:text="@string/send_me_new_password"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corner"
            style="@style/SalesforceSans_Regular_Style"
            android:layout_marginTop="@dimen/_40px_btn_login_martin_top"
            android:layout_width="@dimen/_954px_width_username_textbox"
            android:layout_height="@dimen/_144px_height_username_textbox"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancle"
        android:text="@string/cancel"
        android:layout_gravity="center_horizontal"
        style="@style/SalesforceSans_Regular_Style"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"/>
</LinearLayout>